# alphaz-tpo

./: .gitignore  README.md  config.py  main.py  pyproject.toml  requirements.txt
api/: main.py
api/static/: index.html
eval/: ablation.py  evaluate.py  test_cases.json
explain/: attribution.py  counterfactual.py  localization.py
llm/: client.py  nl_explainer.py
notebooks/: walkthrough.ipynb
solver/: lp_duals.py  nurse_model.py  solve.py
task1_tpo/: README.md  alpaca_eval_cache.json  evaluate.py  response.txt  results.json  run_tpo.py
tpo_refine/: refine_loop.py
