[project]
name = "alphaz-technical"
version = "0.1.0"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.110",
    "numpy>=2.0",
    "openai>=1.40",
    "ortools>=9.15",
    "pandas>=2.2",
    "pulp>=2.7",
    "python-dotenv>=1.0",
    "textgrad>=0.1.8",
    "uvicorn>=0.29",
]
